support socket conn for mongodb

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DB_CONNECTION_STRING=postgres://user:password@localhost:5432/nebula?sslmode=disa
 
 MONGO_DB_CONNECTION_STRING=mongodb://localhost:27017
 MONGO_DB_NAME=nebula
+MONGO_DB_CONNECTION_TYPE=
+MONGO_DB_USERNAME=
+MONGO_DB_PASSWORD=
 
 ENCRYPTOR_SECRET=your_strongest_32_characters_secret
 JWT_SECRET=your_strongest_jwt_secret
